; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/extr_walsender.c_StartReplication.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/extr_walsender.c_StartReplication.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_4__ = type { i64, i32, i64 }

@ThisTimeLineID = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"IDENTIFY_SYSTEM has not been run before START_REPLICATION\00", align 1
@MyReplicationSlot = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [63 x i8] c"cannot use a logical replication slot for physical replication\00", align 1
@am_cascading_walsender = common dso_local global i64 0, align 8
@sendTimeLine = common dso_local global i64 0, align 8
@sendTimeLineIsHistoric = common dso_local global i32 0, align 4
@InvalidXLogRecPtr = common dso_local global i32 0, align 4
@sendTimeLineValidUpto = common dso_local global i32 0, align 4
@sendTimeLineNextTLI = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [78 x i8] c"requested starting point %X/%X on timeline %u is not in this server's history\00", align 1
@.str.3 = private unnamed_addr constant [56 x i8] c"This server's history forked from timeline %u at %X/%X.\00", align 1
@streamingDoneReceiving = common dso_local global i32 0, align 4
@streamingDoneSending = common dso_local global i32 0, align 4
@WALSNDSTATE_CATCHUP = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [87 x i8] c"requested starting point %X/%X is ahead of the WAL flush position of this server %X/%X\00", align 1
@sentPtr = common dso_local global i32 0, align 4
@MyWalSnd = common dso_local global %struct.TYPE_5__* null, align 8
@replication_active = common dso_local global i32 0, align 4
@XLogSendPhysical = common dso_local global i32 0, align 4
@got_STOPPING = common dso_local global i64 0, align 8
@WALSNDSTATE_STARTUP = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [6 x i8] c"%X/%X\00", align 1
@DestRemoteSimple = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [9 x i8] c"next_tli\00", align 1
@INT8OID = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [18 x i8] c"next_tli_startpos\00", align 1
@TEXTOID = common dso_local global i32 0, align 4
@TTSOpsVirtual = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [16 x i8] c"START_STREAMING\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @StartReplication to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @StartReplication(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca [18 x i8], align 16
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca [2 x i32], align 4
  %12 = alloca [2 x i32], align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %13 = load i64, i64* @ThisTimeLineID, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %1
  %16 = load i32, i32* @ERROR, align 4
  %17 = load i32, i32* @ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE, align 4
  %18 = call i32 @errcode(i32 %17)
  %19 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0))
  %20 = call i32 @ereport(i32 %16, i32 %19)
  br label %21

21:                                               ; preds = %15, %1
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 2
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %41

26:                                               ; preds = %21
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 2
  %29 = load i64, i64* %28, align 8
  %30 = call i32 @ReplicationSlotAcquire(i64 %29, i32 1)
  %31 = load i32, i32* @MyReplicationSlot, align 4
  %32 = call i64 @SlotIsLogical(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %40

34:                                               ; preds = %26
  %35 = load i32, i32* @ERROR, align 4
  %36 = load i32, i32* @ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE, align 4
  %37 = call i32 @errcode(i32 %36)
  %38 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0))
  %39 = call i32 @ereport(i32 %35, i32 %38)
  br label %40

40:                                               ; preds = %34, %26
  br label %41

41:                                               ; preds = %40, %21
  %42 = load i64, i64* @am_cascading_walsender, align 8
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %41
  %45 = call i32 (...) @GetStandbyFlushRecPtr()
  store i32 %45, i32* %4, align 4
  br label %48

46:                                               ; preds = %41
  %47 = call i32 (...) @GetFlushRecPtr()
  store i32 %47, i32* %4, align 4
  br label %48

48:                                               ; preds = %46, %44
  %49 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %50 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %49, i32 0, i32 0
  %51 = load i64, i64* %50, align 8
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %105

53:                                               ; preds = %48
  %54 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %55 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  store i64 %56, i64* @sendTimeLine, align 8
  %57 = load i64, i64* @sendTimeLine, align 8
  %58 = load i64, i64* @ThisTimeLineID, align 8
  %59 = icmp eq i64 %57, %58
  br i1 %59, label %60, label %62

60:                                               ; preds = %53
  store i32 0, i32* @sendTimeLineIsHistoric, align 4
  %61 = load i32, i32* @InvalidXLogRecPtr, align 4
  store i32 %61, i32* @sendTimeLineValidUpto, align 4
  br label %104

62:                                               ; preds = %53
  store i32 1, i32* @sendTimeLineIsHistoric, align 4
  %63 = load i64, i64* @ThisTimeLineID, align 8
  %64 = call i32* @readTimeLineHistory(i64 %63)
  store i32* %64, i32** %6, align 8
  %65 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %66 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %65, i32 0, i32 0
  %67 = load i64, i64* %66, align 8
  %68 = load i32*, i32** %6, align 8
  %69 = call i32 @tliSwitchPoint(i64 %67, i32* %68, i64* @sendTimeLineNextTLI)
  store i32 %69, i32* %5, align 4
  %70 = load i32*, i32** %6, align 8
  %71 = call i32 @list_free_deep(i32* %70)
  %72 = load i32, i32* %5, align 4
  %73 = call i32 @XLogRecPtrIsInvalid(i32 %72)
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %102, label %75

75:                                               ; preds = %62
  %76 = load i32, i32* %5, align 4
  %77 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %78 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %77, i32 0, i32 1
  %79 = load i32, i32* %78, align 8
  %80 = icmp slt i32 %76, %79
  br i1 %80, label %81, label %102

81:                                               ; preds = %75
  %82 = load i32, i32* @ERROR, align 4
  %83 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %84 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %83, i32 0, i32 1
  %85 = load i32, i32* %84, align 8
  %86 = ashr i32 %85, 32
  %87 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %88 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %87, i32 0, i32 1
  %89 = load i32, i32* %88, align 8
  %90 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %91 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %90, i32 0, i32 0
  %92 = load i64, i64* %91, align 8
  %93 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([78 x i8], [78 x i8]* @.str.2, i64 0, i64 0), i32 %86, i32 %89, i64 %92)
  %94 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %95 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %94, i32 0, i32 0
  %96 = load i64, i64* %95, align 8
  %97 = load i32, i32* %5, align 4
  %98 = ashr i32 %97, 32
  %99 = load i32, i32* %5, align 4
  %100 = call i32 @errdetail(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.3, i64 0, i64 0), i64 %96, i32 %98, i32 %99)
  %101 = call i32 @ereport(i32 %82, i32 %100)
  br label %102

102:                                              ; preds = %81, %75, %62
  %103 = load i32, i32* %5, align 4
  store i32 %103, i32* @sendTimeLineValidUpto, align 4
  br label %104

104:                                              ; preds = %102, %60
  br label %108

105:                                              ; preds = %48
  %106 = load i64, i64* @ThisTimeLineID, align 8
  store i64 %106, i64* @sendTimeLine, align 8
  %107 = load i32, i32* @InvalidXLogRecPtr, align 4
  store i32 %107, i32* @sendTimeLineValidUpto, align 4
  store i32 0, i32* @sendTimeLineIsHistoric, align 4
  br label %108

108:                                              ; preds = %105, %104
  store i32 0, i32* @streamingDoneReceiving, align 4
  store i32 0, i32* @streamingDoneSending, align 4
  %109 = load i32, i32* @sendTimeLineIsHistoric, align 4
  %110 = icmp ne i32 %109, 0
  br i1 %110, label %111, label %117

111:                                              ; preds = %108
  %112 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %113 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %112, i32 0, i32 1
  %114 = load i32, i32* %113, align 8
  %115 = load i32, i32* @sendTimeLineValidUpto, align 4
  %116 = icmp slt i32 %114, %115
  br i1 %116, label %117, label %176

117:                                              ; preds = %111, %108
  %118 = load i32, i32* @WALSNDSTATE_CATCHUP, align 4
  %119 = call i32 @WalSndSetState(i32 %118)
  %120 = call i32 @pq_beginmessage(i32* %3, i8 signext 87)
  %121 = call i32 @pq_sendbyte(i32* %3, i32 0)
  %122 = call i32 @pq_sendint16(i32* %3, i32 0)
  %123 = call i32 @pq_endmessage(i32* %3)
  %124 = call i32 (...) @pq_flush()
  %125 = load i32, i32* %4, align 4
  %126 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %127 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %126, i32 0, i32 1
  %128 = load i32, i32* %127, align 8
  %129 = icmp slt i32 %125, %128
  br i1 %129, label %130, label %144

130:                                              ; preds = %117
  %131 = load i32, i32* @ERROR, align 4
  %132 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %133 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %132, i32 0, i32 1
  %134 = load i32, i32* %133, align 8
  %135 = ashr i32 %134, 32
  %136 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %137 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %136, i32 0, i32 1
  %138 = load i32, i32* %137, align 8
  %139 = load i32, i32* %4, align 4
  %140 = ashr i32 %139, 32
  %141 = load i32, i32* %4, align 4
  %142 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([87 x i8], [87 x i8]* @.str.4, i64 0, i64 0), i32 %135, i32 %138, i32 %140, i32 %141)
  %143 = call i32 @ereport(i32 %131, i32 %142)
  br label %144

144:                                              ; preds = %130, %117
  %145 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %146 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %145, i32 0, i32 1
  %147 = load i32, i32* %146, align 8
  store i32 %147, i32* @sentPtr, align 4
  %148 = load %struct.TYPE_5__*, %struct.TYPE_5__** @MyWalSnd, align 8
  %149 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %148, i32 0, i32 1
  %150 = call i32 @SpinLockAcquire(i32* %149)
  %151 = load i32, i32* @sentPtr, align 4
  %152 = load %struct.TYPE_5__*, %struct.TYPE_5__** @MyWalSnd, align 8
  %153 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %152, i32 0, i32 0
  store i32 %151, i32* %153, align 4
  %154 = load %struct.TYPE_5__*, %struct.TYPE_5__** @MyWalSnd, align 8
  %155 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %154, i32 0, i32 1
  %156 = call i32 @SpinLockRelease(i32* %155)
  %157 = call i32 (...) @SyncRepInitConfig()
  store i32 1, i32* @replication_active, align 4
  %158 = load i32, i32* @XLogSendPhysical, align 4
  %159 = call i32 @WalSndLoop(i32 %158)
  store i32 0, i32* @replication_active, align 4
  %160 = load i64, i64* @got_STOPPING, align 8
  %161 = icmp ne i64 %160, 0
  br i1 %161, label %162, label %164

162:                                              ; preds = %144
  %163 = call i32 @proc_exit(i32 0)
  br label %164

164:                                              ; preds = %162, %144
  %165 = load i32, i32* @WALSNDSTATE_STARTUP, align 4
  %166 = call i32 @WalSndSetState(i32 %165)
  %167 = load i32, i32* @streamingDoneSending, align 4
  %168 = icmp ne i32 %167, 0
  br i1 %168, label %169, label %172

169:                                              ; preds = %164
  %170 = load i32, i32* @streamingDoneReceiving, align 4
  %171 = icmp ne i32 %170, 0
  br label %172

172:                                              ; preds = %169, %164
  %173 = phi i1 [ false, %164 ], [ %171, %169 ]
  %174 = zext i1 %173 to i32
  %175 = call i32 @Assert(i32 %174)
  br label %176

176:                                              ; preds = %172, %111
  %177 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %178 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %177, i32 0, i32 2
  %179 = load i64, i64* %178, align 8
  %180 = icmp ne i64 %179, 0
  br i1 %180, label %181, label %183

181:                                              ; preds = %176
  %182 = call i32 (...) @ReplicationSlotRelease()
  br label %183

183:                                              ; preds = %181, %176
  %184 = load i32, i32* @sendTimeLineIsHistoric, align 4
  %185 = icmp ne i32 %184, 0
  br i1 %185, label %186, label %219

186:                                              ; preds = %183
  %187 = getelementptr inbounds [18 x i8], [18 x i8]* %7, i64 0, i64 0
  %188 = load i32, i32* @sendTimeLineValidUpto, align 4
  %189 = ashr i32 %188, 32
  %190 = load i32, i32* @sendTimeLineValidUpto, align 4
  %191 = call i32 @snprintf(i8* %187, i32 18, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i32 %189, i32 %190)
  %192 = load i32, i32* @DestRemoteSimple, align 4
  %193 = call i32* @CreateDestReceiver(i32 %192)
  store i32* %193, i32** %8, align 8
  %194 = getelementptr inbounds [2 x i32], [2 x i32]* %12, i64 0, i64 0
  %195 = call i32 @MemSet(i32* %194, i32 0, i32 8)
  %196 = call i32 @CreateTemplateTupleDesc(i32 2)
  store i32 %196, i32* %10, align 4
  %197 = load i32, i32* %10, align 4
  %198 = load i32, i32* @INT8OID, align 4
  %199 = call i32 @TupleDescInitBuiltinEntry(i32 %197, i32 1, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0), i32 %198, i32 -1, i32 0)
  %200 = load i32, i32* %10, align 4
  %201 = load i32, i32* @TEXTOID, align 4
  %202 = call i32 @TupleDescInitBuiltinEntry(i32 %200, i32 2, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.7, i64 0, i64 0), i32 %201, i32 -1, i32 0)
  %203 = load i32*, i32** %8, align 8
  %204 = load i32, i32* %10, align 4
  %205 = call i32* @begin_tup_output_tupdesc(i32* %203, i32 %204, i32* @TTSOpsVirtual)
  store i32* %205, i32** %9, align 8
  %206 = load i64, i64* @sendTimeLineNextTLI, align 8
  %207 = trunc i64 %206 to i32
  %208 = call i32 @Int64GetDatum(i32 %207)
  %209 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0, i64 0
  store i32 %208, i32* %209, align 4
  %210 = getelementptr inbounds [18 x i8], [18 x i8]* %7, i64 0, i64 0
  %211 = call i32 @CStringGetTextDatum(i8* %210)
  %212 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0, i64 1
  store i32 %211, i32* %212, align 4
  %213 = load i32*, i32** %9, align 8
  %214 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0, i64 0
  %215 = getelementptr inbounds [2 x i32], [2 x i32]* %12, i64 0, i64 0
  %216 = call i32 @do_tup_output(i32* %213, i32* %214, i32* %215)
  %217 = load i32*, i32** %9, align 8
  %218 = call i32 @end_tup_output(i32* %217)
  br label %219

219:                                              ; preds = %186, %183
  %220 = call i32 @pq_puttextmessage(i8 signext 67, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.8, i64 0, i64 0))
  ret void
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, ...) #1

declare dso_local i32 @ReplicationSlotAcquire(i64, i32) #1

declare dso_local i64 @SlotIsLogical(i32) #1

declare dso_local i32 @GetStandbyFlushRecPtr(...) #1

declare dso_local i32 @GetFlushRecPtr(...) #1

declare dso_local i32* @readTimeLineHistory(i64) #1

declare dso_local i32 @tliSwitchPoint(i64, i32*, i64*) #1

declare dso_local i32 @list_free_deep(i32*) #1

declare dso_local i32 @XLogRecPtrIsInvalid(i32) #1

declare dso_local i32 @errdetail(i8*, i64, i32, i32) #1

declare dso_local i32 @WalSndSetState(i32) #1

declare dso_local i32 @pq_beginmessage(i32*, i8 signext) #1

declare dso_local i32 @pq_sendbyte(i32*, i32) #1

declare dso_local i32 @pq_sendint16(i32*, i32) #1

declare dso_local i32 @pq_endmessage(i32*) #1

declare dso_local i32 @pq_flush(...) #1

declare dso_local i32 @SpinLockAcquire(i32*) #1

declare dso_local i32 @SpinLockRelease(i32*) #1

declare dso_local i32 @SyncRepInitConfig(...) #1

declare dso_local i32 @WalSndLoop(i32) #1

declare dso_local i32 @proc_exit(i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @ReplicationSlotRelease(...) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32, i32) #1

declare dso_local i32* @CreateDestReceiver(i32) #1

declare dso_local i32 @MemSet(i32*, i32, i32) #1

declare dso_local i32 @CreateTemplateTupleDesc(i32) #1

declare dso_local i32 @TupleDescInitBuiltinEntry(i32, i32, i8*, i32, i32, i32) #1

declare dso_local i32* @begin_tup_output_tupdesc(i32*, i32, i32*) #1

declare dso_local i32 @Int64GetDatum(i32) #1

declare dso_local i32 @CStringGetTextDatum(i8*) #1

declare dso_local i32 @do_tup_output(i32*, i32*, i32*) #1

declare dso_local i32 @end_tup_output(i32*) #1

declare dso_local i32 @pq_puttextmessage(i8 signext, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
